add timebar and rewindbar player

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> -->
     <title>NFT Website</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -412,7 +413,7 @@
                         </div>
 
                         <div class="controls-bottom d-flex align-items-center w-100">
-                            <div class="controls-progress w-100" draggable="true" style="touch-action: none;">
+                            <div class="controls-progress w-100" draggable="true" aria-valuenow="0" style="touch-action: none;">
                                 <div class="controls-progress__line">
                                     <div class="controls-progress__point"></div>
                                 </div>
